pkl-core/src/test/files/LanguageSnippetTests/input/errors/letExpressionError2.pkl
res1 =
  let (x = 1)
    let (y = throw("ouch"))
      y + 2